--- a/styles.css
+++ b/styles.css
@@ -117,8 +117,11 @@ h1 {
     font-size: 70px;
     text-shadow: -5px -4px #CFCBC9;
     color: #3A3B3C;
+
 }
-.oneLiner {
+
+/*TEST*/
+.homepageTitle h2 {
     font-family: 'Josefin Sans', sans-serif;
     font-size: 26px;
     font-weight: bold;
