fixing laptop changes to desktop

--- a/styles.css
+++ b/styles.css
@@ -119,14 +119,8 @@ h1 {
 /* =========================================================*/
 .homepageTitle {
     width: 80vw;
-<<<<<<< HEAD
     margin: 0 auto;
     font-family: 'Cormorant', serif;
-=======
-    height: 20vh;
-    font-family: 'Cormorant', serif;
-    margin: 0 auto;
->>>>>>> 4426e637018c2719b7d1b54d56f80907dbf5d891
 }
 
 .homepageTitle p {
@@ -134,13 +128,9 @@ h1 {
     font-size: 70px;
     text-shadow: -5px -4px #CFCBC9;
     color: #3A3B3C;
-<<<<<<< HEAD
     text-align: center;
     margin-top: 15px;
     margin-bottom: -10px;
-=======
-    margin: 20px 0 -10px 0;
->>>>>>> 4426e637018c2719b7d1b54d56f80907dbf5d891
 }
 
 .homepageTitle h2 {
@@ -151,17 +141,13 @@ h1 {
 }
 
 .aboutMeContainer {
-<<<<<<< HEAD
     width: 80vw; 
-=======
-    width: 80vw;
-    height: 500px;
->>>>>>> 4426e637018c2719b7d1b54d56f80907dbf5d891
     padding-bottom: 30px;
     display: flex;
     align-items: center; /* Think of vertical line - items will be centered along vertical axis*/
     margin: 0 auto;
     background-color: beige;
+    margin-top: 10px;
 }
 
 .circlePicContainer {
@@ -291,7 +277,6 @@ svg {
 
 /* For Tablet */
 @media only screen and (max-width:800px) {
-<<<<<<< HEAD
     .aboutMeContainer {
         display: block;
         padding: 40px;
@@ -300,17 +285,7 @@ svg {
         text-align: center;
         width: 100%;
         display: block;
-=======
-
-    .circlePicContainer, .aboutMeContainer {
-        display: block;
-        width: 100%;
-    }
-
-    .circlePicContainer {
->>>>>>> 4426e637018c2719b7d1b54d56f80907dbf5d891
         margin: 0 auto;
-        margin-top: 10vh;
         width: 50vw;
     }
     .aboutMeContent {
