--- a/styles.css
+++ b/styles.css
@@ -5,32 +5,94 @@
 #page-container {
     position: relative;
     min-height: 100vh;
-    background-color: #CFCBC9;
 }
 #main {
-    padding-bottom: 5rem; /* FOOTER HEIGHT */
+    padding-bottom: 20vh; /* FOOTER HEIGHT */
 }
 
 /* =========================================================*/
 /*                          FOOTER                          */
 /* =========================================================*/
 #footer {
+    height: 20vh; /* FOOTER HEIGHT */
     display: flex;
-    align-content: center;
-    justify-content: center;
-    background-color: #403D39;
-    position:absolute;
-    bottom: 0; 
     width: 100%;
-    height: 5rem; /* FOOTER HEIGHT */
+    background-color: #403D39;
+    font-family: Menlo, monospace;
+
+    padding-top: 10px;
+    align-items: center;
+    justify-content: center;
+    
+    position: absolute;
+    bottom: 0; 
 }
 
-#footer p {
-    color: white;
-    font-family: 'Josefin Sans', sans-serif;
-    font-size: 16px;
-    align-self: center;
+#footer ul {
+ 
+    position: absolute;
+    list-style-type: none;
+
+    display: flex;
 }
+#footer li {
+    list-style: none;
+}
+
+#footer ul li a {
+    /*color: white;
+    text-decoration: none;
+    box-shadow: inset 0 -1px 0 hsla(0, 0%, 100%, 0.4);
+    font-size: 14px;*/
+
+    position: relative;
+    width: 60px;
+    height: 60px;
+    display: block;
+    text-align: center;
+    margin: 0 10px;
+    border-radius: 50%;
+    padding: 6px;
+    box-sizing: border-box;
+    text-decoration: none;
+    box-shadow: 0 10px 15px rgba(0,0,0,0.3);
+    background: linear-gradient(0deg, #ddd, #fff);
+    transition: .5s;
+}
+
+#footer ul li a .fab {
+    width: 100%;
+    height:100%;
+    display:block;
+    background: linear-gradient(0deg, #fff, #ddd);
+    border-radius: 50%;
+    line-height: calc(60px - 12px);
+    font-size:24px;
+    color: #262626;
+    transition: .5s;
+}
+#footer a:hover {
+    box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+    text-decoration:none;
+}
+#footer ul li:nth-child(1) a:hover .fab {
+    color: #3b5998;
+  }
+  
+ #footer ul li:nth-child(2) a:hover .fab {
+    color: #00aced;
+  }
+  
+ #footer ul li:nth-child(3) a:hover .fab {
+    color: #dd4b39;
+  }
+  ul li:nth-child(4) a:hover .fab {
+    color: #007bb6;
+  }
+  
+  ul li:nth-child(5) a:hover .fab {
+    color: #e4405f;
+  }
 /* =========================================================*/
 /*                          NAV                             */
 /* =========================================================*/
@@ -142,20 +204,22 @@ h1 {
 
 .aboutMeContainer {
     width: 80vw; 
-    padding-bottom: 30px;
+    max-width: 1000px;
+    padding-top: 30px;
+    padding-bottom: 60px;
     display: flex;
-    align-items: center; /* Think of vertical line - items will be centered along vertical axis*/
+    align-items: center; /* CENTERED ACROSS */ 
     margin: 0 auto;
-    background-color: beige;
     margin-top: 10px;
 }
 
 .circlePicContainer {
-
     background-color: black;
     width: 40%;
     border-radius: 50%;
     border: thin solid black;
+    max-width: 350px;
+    
 }
 .animate__animated.animate__fadeIn {
     --animate-duration: 5s;
@@ -171,12 +235,12 @@ h1 {
     width: 60%;
     font-family: 'Josefin Sans', sans-serif;
     font-size: 16px;
+    
 }
 strong {
     font-style: bold;
     font-size: 20px;
 }
-.whiteSpace { width: 100%; height: 80px; background-color: aquamarine;}
 
 /* =========================================================*/
 /*                       PROJECTS PAGE                      */
@@ -203,12 +267,13 @@ strong {
 }
 .project-container:hover img {
     opacity: 0.3;
-  }
-  .project-container img:hover {
+}
+  
+.project-container img:hover {
     transform:perspective(800px)
     rotateY(00deg);
     opacity:1;
-  }
+}
 
 /* =========================================================*/
 /*                          BLOG PAGE                       */
@@ -269,8 +334,6 @@ svg {
     transform: scale(1.5);
 }
 
-
-
 /* =========================================================*/
 /*                     RESPONSIVE DESIGN                    */
 /* =========================================================*/
@@ -279,7 +342,7 @@ svg {
 @media only screen and (max-width:800px) {
     .aboutMeContainer {
         display: block;
-        padding: 40px;
+        padding: 20px;
     }
     .circlePicContainer, .aboutMeContent{
         text-align: center;
@@ -289,18 +352,26 @@ svg {
         width: 50vw;
     }
     .aboutMeContent {
-        margin-top: 15px;
-        padding: 0;
+        padding: 20px;
+        padding-top: 40px;
     }
 }
 
 /* For iPhone */
 @media only screen and (max-width:600px) {
+    .homepageTitle h2 {
+        font-size: 18px;
+    }
+    .aboutMeContainer {
+        display: block;
+    }
     .homepageTitle p {
         font-size: 50px;
     }
-    .aboutMeContainer {
-        width: 80vw;
-        display: block;
+    .circlePicContainer {
+        width: 35vw;
+    }
+    .aboutMeContent {
+        font-size: 12px;
     }
 }
