--- a/styles.css
+++ b/styles.css
@@ -35,27 +35,32 @@
     box-sizing: border-box;
 }
 #page-container {
+    display: flex;  
+    flex-direction: column;
+    position: relative;
     background-color: var(--clr-neutral-100);
     position: relative;
     min-height: 100vh;
 }
 /* Holds all content EXCLUDING the footer */
 #main {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-bottom: 15vh; /* FOOTER HEIGHT */
+    /* FOOTER HEIGHT */
+    padding-bottom: 15vh; 
 }
 section {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
     font-family: 'Nanum Myeongjo', serif;
-    padding: 20px;
-    width: 50%;
+    width: 65%;
     max-width: 750px;
 }
 
@@ -80,6 +85,7 @@ html.is-animating .transition-fade {
     padding: 0 30px 0 30px;
     /*Background color of menu bar*/
     background-color: var(--clr-primary-400);
+    flex-wrap: wrap;
 }
 .nav {
     display: flex;
@@ -102,20 +108,24 @@ button {
     font-family: 'Nanum Myeongjo', serif;
     font-size: 1rem;
     border: none;
-    transition: ease-out .75s;
+    transition: ease-out .4s;
     border-radius: 2px;
 }
 
 #logo {
     max-width: 75px;
     margin: 10px 0 10px 0;
-    
 }
 /* Change the link color on hover*/
 button:hover {
     box-shadow: inset 100px 0 0 0 var(--clr-primary-200);
     color: var(--clr-primary-400);
 }
+
+.hamburger {
+    display: none;
+}
+
 /* =========================================================*/
 /*                          HOME PAGE                       */
 /* =========================================================*/
@@ -136,10 +146,19 @@ h2{
 }
 
 .bodyText {
-
     font-size: 1rem;
 }
+.blank {
+    height:80px;
+}
 
+.flowers {
+    width: 100vw;
+}
+.seeMyWorkBtn {
+    padding: 10px;
+    width: 150px;
+}
 /* =========================================================*/
 /*                       PROJECTS PAGE                      */
 /* =========================================================*/
@@ -248,7 +267,7 @@ a:hover {
     font-family: --ff-body;
     position: absolute; /* Keeps footer at the bottom */
     bottom: 0; 
-    color: var(--clr-primary-200)
+    color: var(--clr-primary-200);
 }
 #lastUpdated {
     margin: 0;
@@ -288,3 +307,76 @@ a:hover {
     color: var(--clr-neutral-900);
  }
 
+/* =========================================================*/
+/*                     MEDIA QUERIES                        */
+/* =========================================================*/
+
+@media screen and (max-width:825px) {
+    .menuBar {
+        display: flex; 
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    header {
+        display: flex;
+        flex-direction: column;
+        flex: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+    .bodyText {
+        width: 80%;
+    }
+    header h1 {
+        font-size: 3.75rem;
+    }
+    section {
+        width: 80%;
+    }
+    .seeMyWorkBtn {
+        padding: 10px;
+        width: 150px;
+        margin-bottom: 20px;
+    }
+    
+    .flowers {
+        /* position:absolute;
+        bottom: 15vh; */
+        width:1 100%;
+        object-fit: contain;
+    }
+    .nav {
+        display: none; 
+    }
+
+    .nav.active {
+        width: 100%;
+        text-align: center;
+        transition: 0.3s;
+        left: 0;
+    }
+    .hamburger {
+        position: relative;
+        display: block;
+        width: 35px; 
+        height: 30px;
+        cursor: pointer;
+        
+        appearance: none;
+        background: none;
+        outline: none;
+        border: none;
+    }
+    
+    .hamburger .bar, .hamburger:after .hamburger:before {
+        display: block;
+        content:'';
+        width: 100%;
+        height: 5px; 
+        background-color: blue;
+        margin: 6px 0px;
+        transition: 0.4s;
+    }
+    
+}
