--- a/styles.css
+++ b/styles.css
@@ -159,6 +159,10 @@ h2{
     padding: 10px;
     width: 150px;
 }
+.seeMyWorkBtn:hover {
+    box-shadow: none;
+    color: white;
+}
 /* =========================================================*/
 /*                       PROJECTS PAGE                      */
 /* =========================================================*/
@@ -188,25 +192,14 @@ h2{
 /*                          CONTACT PAGE                    */
 /* =========================================================*/
 
-a {
-    text-decoration: none;
-    color: var(--clr-neutral-900);
-}
-
-a:hover {
-    color: var(--clr-primary-400)
-}
 
 .contactMeForm {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: var(--clr-primary-200);
     width: 100%;
     padding: 20px;
-    border-radius: 6px;
-    box-shadow: 4px 4px 2px #4e565750;
 }
 
 #myform {
@@ -317,7 +310,9 @@ a:hover {
         align-items: center;
         justify-content: space-between;
     }
-
+    .home, .projects {
+        display: none;
+    }
     header {
         display: flex;
         flex-direction: column;
@@ -339,44 +334,24 @@ a:hover {
         width: 150px;
         margin-bottom: 20px;
     }
-    
     .flowers {
         /* position:absolute;
         bottom: 15vh; */
-        width:1 100%;
+        width: 100vw;
         object-fit: contain;
     }
-    .nav {
-        display: none; 
-    }
-
-    .nav.active {
-        width: 100%;
-        text-align: center;
-        transition: 0.3s;
-        left: 0;
-    }
-    .hamburger {
-        position: relative;
-        display: block;
-        width: 35px; 
-        height: 30px;
-        cursor: pointer;
-        
-        appearance: none;
-        background: none;
-        outline: none;
-        border: none;
+  
+    .nav.show {
+        display: flex;
     }
     
-    .hamburger .bar, .hamburger:after .hamburger:before {
+    .hamburger {
         display: block;
-        content:'';
-        width: 100%;
-        height: 5px; 
-        background-color: blue;
-        margin: 6px 0px;
-        transition: 0.4s;
+    }
+    
+    .hamburger:hover {
+        box-shadow: none;
+        color: white;
     }
     
 }
